--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ button {
 
 button:focus,
 button:active {
-  background-color: #404bbf;
+  color: #404bbf;
 }
 
 a {
@@ -111,15 +111,15 @@ textarea {
 /* =========== REUSABLE STILES =========== */
 
 .section {
-  padding: 120px 0;
+  padding: 96px 0;
   margin-right: auto;
   margin-left: auto;
 }
 
 .container {
-  width: 1158px;
+  min-width: 320px;
+  padding: 0 16px;
   margin: 0 auto;
-  padding: 0 15px;
 }
 
 .social-links__item {
@@ -130,6 +130,10 @@ textarea {
 .item-container {
   padding: 32px 0;
   text-align: center;
+}
+
+.accent-color {
+  color: #4d5ae5;
 }
 
 .visually-hidden {
@@ -159,6 +163,7 @@ textarea {
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
+  max-width: 1750px;
 }
 
 .header__contacts-list {
@@ -205,16 +210,21 @@ textarea {
 
 .header__nav {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .header__list {
-  display: flex;
-  gap: 40px;
+  display: none;
 }
 
 .header__list-item:first-child .header__link {
   color: #404bbf;
+}
+
+.header-container .header__list-item:first-child .header__link::after {
+  background-color: #404bbf;
 }
 
 .header__logo {
@@ -223,7 +233,7 @@ textarea {
 
 .header__link,
 .header__logo {
-  padding: 24px 0;
+  padding: 25px 0;
 }
 
 .header__link {
@@ -249,7 +259,10 @@ textarea {
 }
 
 .header__link:hover,
-.header__link:focus,
+.header__link:focus {
+  color: #404bbf;
+}
+
 .header__link:hover::after,
 .header__link:focus::after,
 .header__logo:hover::after,
@@ -258,9 +271,8 @@ textarea {
   background: #404bbf;
 }
 
-.contacts-list__item {
-  padding-bottom: 24px;
-  padding-top: 24px;
+.header-container .header__contacts {
+  display: none;
 }
 
 .header__contacts-item {
@@ -269,6 +281,74 @@ textarea {
   line-height: 24px;
   font-weight: 400;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* =========== HAMBUGER MENU STILES =========== */
+
+.hamburger-menu-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 72px 24px 40px 16px;
+  width: 100vw;
+  height: 100vh;
+  background: #fff;
+  z-index: 9999;
+}
+
+.menu-btn {
+  display: block;
+  background: #fff;
+  border: none;
+}
+
+.hamburger-menu-modal .close-btn {
+  background-color: #fff;
+}
+
+.hamburger-menu-modal .header__list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.hamburger-menu-modal .header__link {
+  justify-content: start;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 111%;
+  letter-spacing: 0.1em;
+}
+
+.hamburger-menu__contacts .header__contacts {
+  margin-bottom: 48px;
+}
+
+.hamburger-menu__contacts .header__contacts-list {
+  flex-direction: column;
+}
+
+.hamburger-menu__contacts .header__contacts-item {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0.4px;
+}
+
+.hamburger-menu__contacts .footer__social-links {
+  justify-content: space-between;
+}
+
+.hamburger-menu__contacts .footer__social-links-item {
+  background-color: #fff;
+}
+
+.header__contacts-item.accent-color {
+  color: #4d5ae5;
 }
 
 /* =========== HERO STILES =========== */
@@ -321,28 +401,40 @@ textarea {
 }
 
 .about-sectioon__container {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   background: #f4f4fd;
   margin-bottom: 8px;
-  padding: 0 100px;
   height: 112px;
 }
 
 .about-section__list {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  gap: 24px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 72px;
 }
 
 .about-section__item {
   display: flex;
   flex-direction: column;
-  width: calc((100% - 72px) / 4);
+  width: 100%;
+}
+
+.about-section__item .item-title {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 111%;
+  letter-spacing: 0.72px;
+  text-align: center;
+}
+
+.about-section__item .item__description {
+  font-weight: 500;
 }
 
 /* =========== OUR TEAM STILES =========== */
@@ -359,7 +451,7 @@ textarea {
 .our-team__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   gap: 24px;
 }
 
@@ -370,12 +462,12 @@ textarea {
 
 .list__item {
   border-radius: 0px 0px 4px 4px;
-  width: calc((100% - 72px) / 4);
   background: var(--WHITE, #ffffff);
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
 }
 
 .our-team__list .list__item {
+  width: 264px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
@@ -467,7 +559,7 @@ textarea {
 }
 
 .portfolio__list .list__item {
-  width: calc((100% - 48px) / 3);
+  width: 288px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -480,12 +572,17 @@ textarea {
 
 .footer-container {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: flex-start;
-  align-items: baseline;
+  align-items: center;
+  gap: 72px;
 }
 
 .footer__social {
-  margin-right: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer__social-title {
@@ -495,7 +592,9 @@ textarea {
 }
 
 .footer__company-slogan {
-  margin-right: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer__logo {
@@ -551,8 +650,16 @@ textarea {
   fill: #f4f4fd;
 }
 
+.footer-suscribtion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .footer-form {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   gap: 24px;
 }
 
@@ -584,7 +691,6 @@ textarea {
 }
 
 .subscribtion-btn-icon {
-  margin-left: 16px;
   flex-shrink: 0;
   fill: #fff;
 }
@@ -609,7 +715,8 @@ textarea {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
+  width: 100%;
+  max-width: 408px;
   min-height: 584px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -813,46 +920,51 @@ textarea {
 
 /* =========== MEDIA QUERIES =========== */
 
-@media (max-width: 768px) {
-  .section {
-    padding: 96px 0;
-  }
-
+@media (min-width: 768px) {
   .container {
-    max-width: 768px; 
-    padding: 0 16px; 
+    min-width: 768px;
   }
 
-  .header__nav {
-    justify-content: space-between;
+  .header__list {
+    display: flex;
+    gap: 40px;
+  }
+
+  .header__contacts {
+    display: block;
+  }
+
+  .menu-btn {
+    display: none;
   }
 
   .header__logo {
     font-size: 18px;
-    margin-right: 120px;
+  }
+
+  .header__nav {
+    justify-content: space-between;
+    width: auto;
   }
 
   .header__contacts-list {
     flex-direction: column;
+    flex-wrap: wrap;
     gap: 12px;
   }
 
   .contacts-list__item,
   .header__contacts-item {
     font-size: 12px;
-    padding: 0;
     line-height: 117%;
   }
 
-  .hero-section {
-    max-width: 768px;
-  }
-
-  .about-sectioon__container {
-    display: none;
+  .header__list {
+    display: flex;
   }
 
   .about-section__list {
+    flex-direction: row;
     gap: 72px 24px;
   }
 
@@ -861,23 +973,15 @@ textarea {
   }
 
   .about-section__item .item-title {
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 111%;
-    letter-spacing: 0.72px;
+    text-align: left;
   }
 
-  .about-section__item .item__description {
-    font-weight: 500;
+  .portfolio__list {
+    gap: 72px 24px;
   }
 
-  .our-team-container {
-    padding: 0 108px;
-  }
-
-  .our-team__list .list__item,
   .portfolio__list .list__item {
-    width: calc((100% - 24px) / 2);
+    width: 356px;
   }
 
   .footer {
@@ -886,16 +990,98 @@ textarea {
 
   .footer-container {
     flex-wrap: wrap;
+    align-items: start;
+    flex-direction: row;
     gap: 72px 24px;
     padding-left: 108px;
   }
 
   .footer__company-slogan,
   .footer__social {
-    margin: 0;
+    align-items: start;
+  }
+
+  .footer-suscribtion {
+    align-items: start;
+  }
+
+  .footer-form {
+    flex-direction: row;
   }
 }
 
-@media (max-width: 320px) {
-  
+@media (min-width: 1158px) {
+  .section {
+    padding: 120px 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .container {
+    min-width: 1158px;
+    padding: 0 15px;
+  }
+
+  .header-container {
+    padding: 0 156px;
+  }
+
+  .header__contacts-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .contacts-list__item,
+  .header__contacts-item {
+    font-size: 16px;
+    padding-bottom: 24px;
+    padding-top: 24px;
+    line-height: 150%;
+  }
+
+  .hero-section {
+    max-width: 1440px;
+  }
+
+  .about-section__list {
+    gap: 24px;
+  }
+
+  .about-sectioon__container {
+    display: flex;
+  }
+
+  .about-section__item {
+    width: 264px;
+  }
+
+  .about-section__item .item-title {
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0.4px;
+  }
+
+  .about-section__item .item__description {
+    font-weight: 400;
+  }
+
+  .portfolio__list {
+    gap: 48px 24px;
+  }
+
+  .portfolio__list .list__item {
+    width: 360px;
+  }
+
+  .footer-container {
+    justify-content: center;
+  }
+
+  .footer__company-slogan {
+    margin-right: 120px;
+  }
+
+  .footer__social {
+    margin-right: 80px;
+  }
 }
